Clean branch without secrets
