# swagger.json
@@ -5,17 +5,49 @@
     "description": "Auto Shop Booking System API",
     "version": "1.0.0"
   },
+  "host": "localhost:3000",
   "basePath": "/",
+  "schemes": [
+    "http",
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
-        "tags": [
-          "Index Page"
-        ],
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -29,6 +61,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -45,19 +80,19 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "jacob"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "brown"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "jacob@email.com"
+                  "example": "any"
                 },
                 "phone": {
-                  "example": "0756456352"
+                  "example": "any"
                 },
                 "dob": {
-                  "example": "1990/02/05"
+                  "example": "any"
                 }
               }
             }
@@ -66,6 +101,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -91,6 +129,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -115,19 +156,19 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "peter"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "hamming"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "peter@email.com"
+                  "example": "any"
                 },
                 "phone": {
-                  "example": "0345243857"
+                  "example": "any"
                 },
                 "dob": {
-                  "example": "1998/07/02"
+                  "example": "any"
                 }
               }
             }
@@ -136,6 +177,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -156,6 +200,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -165,11 +212,141 @@
         }
       }
     },
-    "/user/": {
+    "/car/": {
       "get": {
         "tags": [
-          "Users"
+          "Cars"
         ],
+        "description": "Get all cars",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Cars"
+        ],
+        "description": "Create a new car",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Car information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Car"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/car/{id}": {
+      "get": {
+        "tags": [
+          "Cars"
+        ],
+        "description": "Get a car by id",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Cars"
+        ],
+        "description": "Update a car by id",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Car information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Car"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Cars"
+        ],
+        "description": "Delete a car by id",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/user/": {
+      "get": {
         "description": "",
         "produces": [
           "application/json"
@@ -187,45 +364,42 @@
         }
       },
       "post": {
-      "tags": [
-        "Users"
-      ],
-      "description": "",
-      "parameters": [
-        {
-          "name": "body",
-          "in": "body",
-          "schema": {
-            "type": "object",
-            "properties": {
-              "firstName": {
-                "example": "Jacob"
-              },
-              "lastName": {
-                "example": "Brown"
-              },
-              "email": {
-                "example": "jacob@email.com"
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                }
               }
             }
           }
-        }
-      ],
-      "responses": {
-        "201": {
-          "description": "Created"
-        },
-        "500": {
-          "description": "Internal Server Error"
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
-    }
     },
     "/user/{id}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -257,9 +431,6 @@
         }
       },
       "put": {
-        "tags": [
-          "Users"
-        ],
         "description": "",
         "parameters": [
           {
@@ -275,13 +446,13 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "Jason"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "Robertson"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "jason.robertson@email.com"
+                  "example": "any"
                 }
               }
             }
@@ -306,9 +477,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
         "description": "",
         "parameters": [
           {
@@ -336,6 +504,61 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "Car": {
+      "type": "object",
+      "properties": {
+        "model": {
+          "type": "string",
+          "example": ""
+        },
+        "brand": {
+          "type": "string",
+          "example": ""
+        },
+        "plate": {
+          "type": "string",
+          "example": ""
+        },
+        "color": {
+          "type": "string",
+          "example": ""
+        },
+        "passengers": {
+          "type": "number",
+          "example": 0
+        },
+        "doors": {
+          "type": "number",
+          "example": 0
+        },
+        "engine_type": {
+          "type": "string",
+          "example": "Gas | Diesel | Electric | Hybrid"
+        },
+        "transmission": {
+          "type": "string",
+          "example": "Manual | Automatic"
+        },
+        "year": {
+          "type": "number",
+          "example": 0
+        },
+        "clientId": {
+          "type": "string",
+          "example": ""
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {}
+    },
+    "Client": {
+      "type": "object",
+      "properties": {}
     }
   }
 }
